--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <gwt.version>2.6.0-rc3</gwt.version>
         <guava.version>15.0</guava.version>
         <closure.version>v20131127</closure.version>
+        <junit.version>4.11</junit.version>
+        <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
     </properties>
 
     <repositories>
@@ -64,6 +66,11 @@
             <version>${closure.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+        </dependency>
 
     </dependencies>
 
@@ -90,6 +97,26 @@
                 <version>1.8</version>
             </extension>
         </extensions>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+                <configuration>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${project.build.sourceDirectory}</additionalClasspathElement>
+                        <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
+                    </additionalClasspathElements>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <systemProperties>
+                        <property>
+                            <name>gwt.args</name>
+                            <value>-war ${basedir}/src/test/war</value>
+                        </property>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <distributionManagement>
