--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.google.gwt</groupId>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+    <groupId>com.github.jdramaix</groupId>
     <artifactId>gssresource</artifactId>
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
@@ -16,8 +23,18 @@
             <name>Julien Dramaix</name>
             <email>julien.dramaix@gmail.com</email>
             <timezone>+1</timezone>
+            <roles>
+                <role>Lead developer</role>
+            </roles>
         </developer>
     </developers>
+
+    <contributors>
+        <contributor>
+            <name>Simon-Pierre Gringas</name>
+            <email>simon.pierre.gingras@gmail.com</email>
+        </contributor>
+    </contributors>
 
     <scm>
         <connection>scm:git:git@github.com:jDramaix/gss.gwt.git</connection>
@@ -89,13 +106,6 @@
         </dependency>
     </dependencies>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>synergian-repo</id>
-            <url>https://raw.github.com/synergian/wagon-git/releases</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
         <resources>
             <resource>
@@ -105,13 +115,6 @@
                 <directory>${basedir}/src/main/resources</directory>
             </resource>
         </resources>
-        <extensions>
-            <extension>
-                <groupId>org.jvnet.wagon-svn</groupId>
-                <artifactId>wagon-svn</artifactId>
-                <version>1.8</version>
-            </extension>
-        </extensions>
 
         <plugins>
             <plugin>
@@ -131,19 +134,15 @@
                     </systemProperties>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <arguments>-Psonatype-oss-release -Dgpg.passphrase=${gpg.passphrase}</arguments>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
-    <distributionManagement>
-        <repository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>googlecode</id>
-            <url>svn:https://gwtquery-plugins.googlecode.com/svn/mavenrepo/</url>
-        </repository>
-        <snapshotRepository>
-            <uniqueVersion>false</uniqueVersion>
-            <id>googlecode</id>
-            <url>svn:https://gwtquery-plugins.googlecode.com/svn/mavenrepo/</url>
-        </snapshotRepository>
-    </distributionManagement>
 </project>
