--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
         <junit.version>4.11</junit.version>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
         <closure.version>v20140407</closure.version>
+        <mockito.version>1.9.5</mockito.version>
     </properties>
 
     <repositories>
@@ -103,6 +104,14 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${mockito.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
