Fix issue with sprite when a style class has the same name than an image resource

--- a/pom.xml
+++ b/pom.xml
@@ -58,13 +58,13 @@
         <guava.version>17.0</guava.version>
         <junit.version>4.11</junit.version>
         <maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
-        <closure.version>v20140407</closure.version>
+        <closure.version>v20140516</closure.version>
         <mockito.version>1.9.5</mockito.version>
     </properties>
 
     <repositories>
         <repository>
-            <id>gwtquery-plugins</id>
+            <id>closure-stylesheet</id>
             <url>http://gwtquery-plugins.googlecode.com/svn/mavenrepo</url>
         </repository>
     </repositories>
