- fix issue with constant renaming (issue #123 and #121) - add CssResource.conversionMode to enable a lenient automatic conversion. - fix Css2GssException in order to be able to catch them

--- a/pom.xml
+++ b/pom.xml
@@ -141,6 +141,7 @@
                             <value>-war ${basedir}/src/test/war</value>
                         </property>
                     </systemProperties>
+                    <argLine>-Xmx1024m</argLine>
                 </configuration>
             </plugin>
             <plugin>
